# kalpy

./: .gitignore  .pylintrc  .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml
docs/: gen_ref_pages.py  index.md  requirements.txt
docs/stylesheets/: extra.css
kalpy/: _kaleidoscope_model.py  activities.py  client.py  dashboards.py  entity_fields.py  entity_types.py  exports.py  helpers.py  imports.py  labels.py  programs.py  property_fields.py  record_views.py  records.py  workspace.py
tests/: conftest.py  test_activities.py  test_entity_types.py  test_exports.py  test_fields.py  test_helpers.py  test_imports.py  test_programs.py  test_record_views.py  test_records.py
tests/responses/: data_fields.json  entity_types.json  experiment_types.json  experiments.json  key_fields.json  programs.json  property_fields.json  record.json  record_values.json  record_views.json  records.json  tasks.json
