[tool.poetry]
name = "kalpy"
version = "0.2.0"
description = "Python client for Kaleidoscope API"
authors = ["Ahmed Elnaiem <ahmed@kaleidoscope.bio>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
requests = "^2.32.3"

[tool.poetry.urls]
Homepage = "https://github.com/kaleidoscope-tech/kalpy"
Repository = "https://github.com/kaleidoscope-tech/kalpy"
Documentation = "https://api.docs.kaleidoscope.bio"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
